# openapi-spec-sanitizer

./: .gitignore  Changelist.md  README.md  pyproject.toml  requirements.txt  setup.py  unittest.cfg
.github/workflows/: python_package.yaml
src/openapi_spec_sanitizer/: ArgParser.py  __main__.py  analyzer.py  argparser.py  dumper.py  entry.py  exceptions.py  loader.py  sanitizer.py  sanitizer_orig.py  stateful.py  test.yaml
tests/: less_simple.json  less_simple.yaml  simple.yaml  simple_unused.yaml  test_openbanking.py  test_sanitizer.py
tests/default/: test_functional.py  test_sanitizer.py
tests/openbanking/: openbanking_specs.yaml  test_openbanking.py
